[package]
name = "nist-pqc-seeded-rng"
description = "Implementation of the RNG used to produce the KATs in NIST PQC competition"
author = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
categories = ["cryptography"]
keywords = ["rng", "NIST", "PQC"]

[dependencies]
aes = { version = "0.8.4", default-features = false }
ctr = { version = "0.9.2", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.4", optional = true, default-features = false, features = [
  "derive",
] }

[features]
std = ["ctr/std"]
zeroize = ["dep:zeroize", "ctr/zeroize", "aes/zeroize"]
default = ["std"]
