[package]
name = "nist-pqc-seeded-rng"
description = "Implementation of the RNG used to produce the KATs in NIST PQC competition"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ait-crypto/nist-pqc-seeded-rng"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
categories = ["cryptography", "no-std"]
keywords = ["rng", "NIST", "PQC"]

[dependencies]
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.4", optional = true, default-features = false, features = [
  "derive",
] }
serde = { version = "1", optional = true, default-features = false, features = [
  "derive",
] }
# needs to be compatible with aes and ctr; required to enable serde and zeroize features
generic-array = { version = "1.1", default-features = false }

[features]
std = ["ctr/std"]
zeroize = ["dep:zeroize", "ctr/zeroize", "aes/zeroize", "generic-array/zeroize"]
default = ["std", "serde", "zeroize"]
serde = ["dep:serde", "generic-array/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
